--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,8 @@ workflows:
       - aws-ecr/build-and-push-image:
           executor: docker_build
           name: 'build-production'
-          account-url: "${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com"
-          region: ${AWS_DEFAULT_REGION}
+          account-url: AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME
+          region: AWS_DEFAULT_REGION
           repo: "${AWS_RESOURCE_NAME_PREFIX}"
           tag: "${CIRCLE_SHA1}"
           filters:
