--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ workflows:
           aws-region: ${AWS_DEFAULT_REGION}
           family: "react-rails-ecs-task-definition-family"
           cluster-name: "react-rails-ecs-cluster"
+          service-name: "react-rails-ecs-service-wev"
           container-image-name-updates: "container=web, image-and-tag=${AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME}/${AWS_RESOURCE_NAME_PREFIX}:${CIRCLE_SHA1}"
           filters:
             branches:
