--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,12 @@ jobs:
       - image: circleci/python:3.4
     steps:
       - run:
+          name: pwd
+          command: pwd
+      - run:
+          name: ls -la
+          command: ls -la
+      - run:
           name: create master.key
           command: echo "${RAILS_MASTER_KEY}" > ~/app/config/master.key
 
@@ -18,6 +24,8 @@ workflows:
     jobs:
       - set-master-key
       - aws-ecr/build-and-push-image:
+          requires:
+            - set-master-key
           name: 'build-production'
           account-url: AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME
           region: AWS_DEFAULT_REGION
