--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ workflows:
             - build-production
           aws-region: ${AWS_DEFAULT_REGION}
           family: "react-rails-ecs-task-definition-family"
-          cluster-name: "react-rails-ecs-cluster"
+          cluster-name: "ecs-cluster"
           service-name: "react-rails-ecs-service-web"
           container-image-name-updates: "container=web, image-and-tag=${AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME}/${AWS_RESOURCE_NAME_PREFIX}:${CIRCLE_SHA1}"
           filters:
