--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,58 +16,39 @@ references:
           only:
             - master
 
-executors:
-  build_and_push:
-    machine:
-      image: ubuntu-1604:201903-01
-      docker_layer_caching: false
-  deploy:
-    machine:
-      image: circleci/python:3.7.1
-
-jobs:
-  staging_build_and_push:
-    executor: build_and_push
-    steps:
-      - run : echo "todo"
-  production_build_and_push:
-    executor: build_and_push
-    steps:
+workflows:
+  build-and-deploy:
+    jobs:
       - aws-ecr/build-and-push-image:
+          name: 'staging_build'
+          account-url: todo
+          region: AWS_DEFAULT_REGION
+          repo: todo
+          tag: "${CIRCLE_SHA1}"
+          <<: *staging_branch_filter
+      - aws-ecs/deploy-service-update:
+          requires:
+            - staging_build
+          aws-region: ${AWS_DEFAULT_REGION}
+          family: todo
+          cluster-name: todo
+          service-name: todo
+          container-image-name-updates: todo
+          <<: *staging_branch_filter
+
+      - aws-ecr/build-and-push-image:
+          name: 'production_build'
           account-url: AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME
           region: AWS_DEFAULT_REGION
           repo: "${AWS_RESOURCE_NAME_PREFIX}"
           tag: "${CIRCLE_SHA1}"
-
-  staging_deploy:
-    executor: deploy
-    steps:
-      - run : echo "todo"
-  production_deploy:
-    executor: deploy
-    steps:
+          <<: *master_branch_filter
       - aws-ecs/deploy-service-update:
+          requires:
+            - production_build
           aws-region: ${AWS_DEFAULT_REGION}
           family: "react-rails-ecs-task-definition-family"
           cluster-name: "ecs-cluster"
           service-name: "react-rails-ecs-service-web"
           container-image-name-updates: "container=web, image-and-tag=${AWS_ECR_ACCOUNT_URL_ENV_VAR_NAME}/${AWS_RESOURCE_NAME_PREFIX}:${CIRCLE_SHA1}"
-
-workflows:
-  build-and-deploy:
-    jobs:
-      # stagingブランチ
-      - staging_build_and_push:
-          <<: *staging_branch_filter
-      - staging_deploy:
-          requires:
-            - staging_build_and_push
-          <<: *staging_branch_filter
-
-      # masterブランチ
-      - production_build_and_push:
-          <<: *master_branch_filter
-      - production_deploy:
-          requires:
-            - production_build_and_push
           <<: *master_branch_filter
